added more service and debug sesion